Resize headers on small screens, format OCI section better at all sizes, fixes #261

--- a/assets/styles/sass/interviews.scss
+++ b/assets/styles/sass/interviews.scss
@@ -3,6 +3,9 @@
 
 .interview-banner {
   @extend .resume-banner;
+  & > h2 {
+    font-size: 4rem; 
+  }
 }
 .interview-types {
   @extend .document-review;
@@ -14,14 +17,10 @@
 .interview-details {
   padding: 0;
   margin-top: -5rem;
-  .flat-btn {
-    margin: 0;
-    margin-top: 3rem;
-  }
 }
 .interview-details > p {
-  width: 45%;
-  margin: 3rem auto;
+  width: auto;
+  margin: 3rem 5rem;
   display: block;
 }
 .online-interview-requirements-header {
@@ -49,6 +48,10 @@
   position: relative;
   top: -1.8rem;
 }
+.buttons {
+  padding: 5rem;
+  padding-top: 0;
+}
 
 @media (min-width: $small-screen-size) {
   .desktop-hide {
@@ -56,6 +59,9 @@
   }
   .desktop-show {
     display: block; 
+  }
+  .interview-banner > h2 {
+    font-size: 6rem; 
   }
 }
 
@@ -73,5 +79,15 @@
         margin-bottom: 0;
       }
     }
+  }
+  .interview-details > p {
+    width: 45%;
+    margin: 3rem auto;
+  }
+  .buttons {
+    width: 45%;
+    margin: 0 auto;
+    padding: 0;
+    padding-bottom: 5rem;
   }
 }
